--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 GOOGLE_GENAI_USE_VERTEXAI=0
-GOOGLE_API_KEY=AIzaSyDc_bBTkAmu_CYLZLdjfaVKep7olc63F1Q
+GOOGLE_API_KEY=<API_KEY>
 MCP_HOST_URL = http://localhost:8600
